--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <header class="welcome-header">
         <h1 class="welcome-header__title">Welcome to Kokoa Talk greedings!</h1>
-        <p class="welcome-header__text">If you have a Kakao account, log in with your email or Phone number.</p>
+        <p class="welcome-header__text">If you have a Kakao account, log in with your email or Phone number or please call to our phone number.</p>
 
     </header>
     <form id="please log in">
