--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
         <p class="welcome-header__text">If you have a Kakao account, log in with your email or Phone number or please call to our phone number.</p>
 
     </header>
-    <form id="please log in">
+    <form id="please-log-in">
         <input type="text" placeholder="Email or Phone number"/>
         <input type="password" placeholder="Password"/>
-        <input type="submit" value="Log in"/>
+        <input id="hong" type="button" value="Log in"/>
         <a href="#">Find Kakao Account or Password</a>
 
     </form>
+
+  
    
 
 
