--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Kokoa Talk</title>
 </head>
-<body>
+ <body>
     <div class="status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
@@ -27,13 +27,14 @@
         <p class="welcome-header__text">If you have a Kakao account, log in with your email or Phone number or please call to our phone number.</p>
 
     </header>
-    <form id="please-log-in">
-        <input type="text" placeholder="Email or Phone number"/>
-        <input type="password" placeholder="Password"/>
-        <input id="hong" type="button" value="Log in"/>
+    <form action="friends.html" method="get" id="please-log-in">
+        <input name="username" type="text" placeholder="Email or Phone number"/>
+        <input name="password" type="password" placeholder="Password"/>
+        <input type="submit" value="Log in"/>
         <a href="#">Find Kakao Account or Password</a>
 
     </form>
+
 
   
    
