--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
     </div>
     <header class="welcome-header">
-        <h1 class="welcome-header__title">Welcome to Kokoa Talk greedings!</h1>
-        <p class="welcome-header__text">If you have a Kakao account, log in with your email or Phone number or please call to our phone number.</p>
+        <h1 class="welcome-header__title">Welcome to PIoneet.com greedings!</h1>
+        <p class="welcome-header__text">If you have a Kakao account, log in with your email or Phone number</p>
 
     </header>
     <form action="friends.html" method="get" id="please-log-in">
