--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <p class="welcome-header__text">If you have a Kakao account, log in with your email or Phone number</p>
 
     </header>
-    <form action="friends.html" method="get" id="please-log-in">
-        <input name="username" type="text" placeholder="Email or Phone number"/>
-        <input name="password" type="password" placeholder="Password"/>
-        <input type="submit" value="Log in"/>
-        <a href="#">Find Kakao Account or Password</a>
+    <form action="friends.html" method="get" class="please-log-in">
+        <input class="please-log-in__input"name="username" type="text" placeholder="Email or Phone number"/>
+        <input class="please-log-in__input"name="password" type="password" placeholder="Password"/>
+        <input class="please-log-in__input please-log-in__submit"type="submit" value="Log in"/>
+        <a class="please-log-in__link"href="#">Find Kakao Account or Password</a>
 
     </form>
 
