more 스크린까지

--- a/friends.html
+++ b/friends.html
@@ -37,7 +37,7 @@
     <main class="chats-screen">
         <div class="user-component">
             <div class="user-component__column">
-                <img class="user-component__avatar user-component__avatar-xl" src="file:///C:/Users/family/Pictures/efaa2f69e94c67485832d0cb28adef19.jpg"/>
+                <img class="user-component__avatar user-component__avatar-xl" src="https://i.pinimg.com/564x/b4/5c/00/b45c0065d0f6de6940629f282c245b25.jpg"/>
                 <!--이미지에 있는 두개의 클래스는 각각 하나이다 저런걸 변형이라고 한다.-->
                 <div class="user-component__text">
                     <h4 class="user-component__title">PIoneet</h4><!--div는 단순히 박스이기 때문에 div 안에서도 class만들어준다-->
