--- a/find.html
+++ b/find.html
@@ -28,7 +28,7 @@
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg fa-search-find"></i></span>
             <div class="screen-header__icons-cog">
-                <span><i class="fas fa-cog fa-lg"></i></span>
+                <a href="settings.html"><span><i class="fas fa-cog fa-lg"></i></span></a>
                 <span class="watcha"></span>
             </div>
         </div>
