--- a/friends.html
+++ b/friends.html
@@ -28,7 +28,7 @@
         <div class="screen-header__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
             <span><i class="fas fa-guitar fa-lg"></i></span>
-            <span><i class="fas fa-cog fa-lg"></i></span>
+            <a href="settings.html"><span><i class="fas fa-cog fa-lg"></i></span></a>
         </div>
     </header>
     
@@ -37,7 +37,7 @@
     <main class="chats-screen">
         <div class="user-component">
             <div class="user-component__column">
-                <img class="user-component__avatar user-component__avatar-xl" src="https://i.pinimg.com/564x/b4/5c/00/b45c0065d0f6de6940629f282c245b25.jpg"/>
+                <img class="user-component__avatar user-component__avatar-xl" src="https://i.pinimg.com/564x/54/ea/df/54eadf0e65bafb86cf7b6535c04e00fc.jpg"/>
                 <!--이미지에 있는 두개의 클래스는 각각 하나이다 저런걸 변형이라고 한다.-->
                 <div class="user-component__text">
                     <h4 class="user-component__title">PIoneet</h4><!--div는 단순히 박스이기 때문에 div 안에서도 class만들어준다-->
@@ -51,7 +51,7 @@
         </div>
             <div class="user-component__column">
                 <div class="user-component__side">
-                    <img class="user-component__avatar user-component__avatar-sm" src="file:///C:/Users/family/Downloads/%E5%8D%96%E6%88%91%E5%8D%A1%E5%A7%90%E4%B8%80%E4%B8%AA%E9%9D%A2%E5%AD%90%20%20%E6%88%91%E6%83%B3%E8%A6%81%F0%9F%91%8D-sophia%E8%8F%B2.jfif"/>
+                    <img class="user-component__avatar user-component__avatar-sm" src="https://i.pinimg.com/564x/b8/e8/34/b8e834889cca3e0d0c252a4d14998e86.jpg"/>
                     <div class="user-component__text">
                     <h4 class="user-component__title">Sophia</h4><!--div는 단순히 박스이기 때문에 div 안에서도 class만들어준다-->
                     </div>
@@ -62,7 +62,7 @@
             </div>
             <div class="user-component__column gg">
                 <div class="user-component__side">
-                    <img class="user-component__avatar user-component__avatar-sm" src="file:///C:/Users/family/Downloads/4121cfdb4a6142c1d4e4ea3f2f07736e.jpg"/>
+                    <img class="user-component__avatar user-component__avatar-sm" src="https://i.pinimg.com/564x/06/19/b8/0619b8cd1565545dc4ba17b2e50452ca.jpg"/>
                     <div class="user-component__text">
                     <h4 class="user-component__title">Harry</h4><!--div는 단순히 박스이기 때문에 div 안에서도 class만들어준다-->
                     </div>
