--- a/friends.html
+++ b/friends.html
@@ -37,7 +37,7 @@
     <main class="chats-screen">
         <div class="user-component">
             <div class="user-component__column">
-                <img class="user-component__avatar user-component__avatar-xl" src="https://i.pinimg.com/564x/54/ea/df/54eadf0e65bafb86cf7b6535c04e00fc.jpg"/>
+                <img class="user-component__avatar user-component__avatar-xl" src="https://i.pinimg.com/564x/3f/d3/8e/3fd38e9a9f497c73b209afd7820fb472.jpg"/>
                 <!--이미지에 있는 두개의 클래스는 각각 하나이다 저런걸 변형이라고 한다.-->
                 <div class="user-component__text">
                     <h4 class="user-component__title">PIoneet</h4><!--div는 단순히 박스이기 때문에 div 안에서도 class만들어준다-->
@@ -51,7 +51,7 @@
         </div>
             <div class="user-component__column">
                 <div class="user-component__side">
-                    <img class="user-component__avatar user-component__avatar-sm" src="https://i.pinimg.com/564x/b8/e8/34/b8e834889cca3e0d0c252a4d14998e86.jpg"/>
+                    <img class="user-component__avatar user-component__avatar-sm" src="https://i.pinimg.com/564x/fe/5f/66/fe5f66c19a9f4748c32f859f7307d10b.jpg"/>
                     <div class="user-component__text">
                     <h4 class="user-component__title">Sophia</h4><!--div는 단순히 박스이기 때문에 div 안에서도 class만들어준다-->
                     </div>
@@ -62,7 +62,7 @@
             </div>
             <div class="user-component__column gg">
                 <div class="user-component__side">
-                    <img class="user-component__avatar user-component__avatar-sm" src="https://i.pinimg.com/564x/06/19/b8/0619b8cd1565545dc4ba17b2e50452ca.jpg"/>
+                    <img class="user-component__avatar user-component__avatar-sm" src="https://i.pinimg.com/736x/11/bc/ca/11bcca0b500d41c5efb52067367c8689.jpg"/>
                     <div class="user-component__text">
                     <h4 class="user-component__title">Harry</h4><!--div는 단순히 박스이기 때문에 div 안에서도 class만들어준다-->
                     </div>
@@ -94,6 +94,10 @@
             </1i>
         </ul>
     </nav>
+
+    <div class="comment-animation">
+        <i class="fas fa-comment"></i>
+    </div>
     
   
 
